--- a/src/node/node.scss
+++ b/src/node/node.scss
@@ -104,4 +104,12 @@
       position: absolute;
     }
   }
+
+  > .progress {
+    border: 1px solid $gray-8;
+    border-radius: $border-radius;
+    height: 5px;
+    position: relative;
+    top: -5px;
+  }
 }
