--- a/src/node/node.scss
+++ b/src/node/node.scss
@@ -109,7 +109,8 @@
     border: 1px solid $gray-8;
     border-radius: $border-radius;
     height: 5px;
-    position: relative;
-    top: -5px;
+    position: absolute;
+    top: calc(100% - 5px);
+    width: 100%;
   }
 }
