visualizes pipeline results and outputs (#8)
* partial of modes

* highlight subsetizable ports

* bug fixes in contextmenu, histogram, export dialog

* WIP explore data

* visualize pipeline results and outputs

* fix data folder creation error

* fix gulp pipe

* add pipeline export

* fix lint

* fix demo.zip url; fill in create pipelines fields

--- a/src/panel/pipeline-panel/pipeline-panel.scss
+++ b/src/panel/pipeline-panel/pipeline-panel.scss
@@ -5,15 +5,23 @@
   left: 100px;
   padding: $padding;
   position: relative;
-  top: 40px;
+  top: 60px;
   width: calc(100% - 100px * 2);
   z-index: 101;
 
-  .header > label {
-    border: 1px solid $gray-a;
-    border-radius: $border-radius;
-    color: $gray-5;
-    padding: 0 $padding;
+  .header {
+    height: 28px;
+
+    > label {
+      border: 1px solid $gray-a;
+      border-radius: $border-radius;
+      color: $gray-5;
+      padding: 0 $padding;
+    }
+
+    > div.float-right {
+      float: right;
+    }
   }
 
   .content {
