--- a/src/module/module.scss
+++ b/src/module/module.scss
@@ -10,4 +10,10 @@
     height: 30px;
     width: 60px;
   }
+
+  .content > div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
